[package]
name = "planner-tests"
version = "0.1.0"
authors = ["Olga Gaponenko <ogaponenko3@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.15"

structopt = "0.3"

log = "0.4.8"
env_logger = "0.7.1"

thiserror = "1.0.11"

futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
sqlx = { version = "0.4.0-beta.1", default-features = false, features = [ "runtime-tokio", "macros", "postgres", "chrono" ] }
